--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://Itzsoham.github.io/travel-list",
+  "homepage": "https://itzsoham.github.io/travel-list",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
